--- a/.github/workflows/deploy-ftp.yml
+++ b/.github/workflows/deploy-ftp.yml
@@ -29,11 +29,11 @@ jobs:
       - name: Deploy FTP
         uses: SamKirkland/FTP-Deploy-Action@4.2.0
         with:
-          server: ${{ secrets.FTP_SERVER }}
+          server: ${{ secrets.FTP_SERVER }}:${{ secrets.FTP_PORT }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           protocol: ${{ secrets.FTP_PROTOCOL }}
-          port: ${{ secrets.FTP_PORT}}
+          # port: ${{ secrets.FTP_PORT}}
           server-dir: ${{ secrets.FTP_REMOTE_ROOT }}
           local-dir: ./out/
           dangerous-clean-slate: true
